# deepracer-research

./: .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml
deepracer_research/: __init__.py  cli.py
deepracer_research/architectures/: __init__.py  advanced_architectures.py  attention_modules.py  factory.py  multi_scale_feature_extractor.py  residual_block.py
deepracer_research/config/: __init__.py  aws_config.py
deepracer_research/config/aws/: __init__.py  action_space_config.py  aws_hyperparameters.py  aws_model_metadata.py  scenario_action_spaces.py  sensor_config.py
deepracer_research/config/network/: __init__.py  activation_type.py  architecture_type.py  network_config.py  neural_network_type.py  racing_configs.py
deepracer_research/config/research/: __init__.py  research_config.py  template_config.py
deepracer_research/config/track/: __init__.py  track_type.py
deepracer_research/config/training/: __init__.py  exploration_strategy.py  loss_type.py  optimizer_config.py  training_algorithm.py
deepracer_research/deployment/: __init__.py  deployment_target.py  unified_deployment_config.py
deepracer_research/deployment/aws_ec2/: __init__.py  cli.py
deepracer_research/deployment/deepracer/: __init__.py  deep_racer_deployment_config.py  deployment_manager.py  helpers.py  hyperparameters.py
deepracer_research/deployment/local/: __init__.py
deepracer_research/deployment/nvidia_brev/: __init__.py  cli.py  utils.py
deepracer_research/deployment/sagemaker/: __init__.py  hyperparameters.py  instance_type.py  sagemaker_deployment_config.py
deepracer_research/deployment/templates/: template-run.env.j2  template-system.env.j2  template-worker.env.j2  template_utils.py  training_params.yaml
deepracer_research/deployment/thunder_compute/: __init__.py  cli.py
deepracer_research/experiments/: __init__.py  experimental_configuration.py  experimental_plan.py
deepracer_research/experiments/config/: __init__.py  experimental_configuration.py  hyperparameter_configuration.py  sensor_configuration.py
deepracer_research/experiments/enums/: __init__.py  experimental_scenario.py  sensor_modality.py
deepracer_research/experiments/evaluation/: __init__.py
deepracer_research/models/: __init__.py  aws_builder.py  deployment_status.py  manager.py  metadata_mapper.py  model_metadata.py  model_version.py
deepracer_research/optimization/: __init__.py  gpu_utils.py  model_optimizer.py
deepracer_research/rewards/: __init__.py  builder.py  reward_function_type.py  template_loader.py
deepracer_research/rewards/parameters/: __init__.py  core_parameters.py  deepracer_parameters.py  object_parameters.py  parameter_definition.py  parameter_type.py  status_parameters.py  waypoint_parameters.py
deepracer_research/rewards/templates/: __init__.py  basic_fallback.yaml  centerline_following.yaml  head_to_head.yaml  object_avoidance.yaml  object_avoidance_dynamic.yaml  object_avoidance_static.yaml  speed_optimization.yaml  time_trial.yaml
deepracer_research/training/: __init__.py
deepracer_research/training/config/: __init__.py  training_job_config.py  training_job_result.py
deepracer_research/training/enums/: __init__.py  training_job_status.py
deepracer_research/training/management/: __init__.py  training_manager.py
deepracer_research/training/monitoring/: __init__.py  (+1 more)
deepracer_research/utils/: __init__.py  aws_config.py  logger.py  s3_utils.py
infrastructure/: cloudformation-template.yaml  deploy.py  parameters.example.json
models/4ac29741/: hyperparameters.json  model_metadata.json  reward_function.py
models/4d05ded7/: model_metadata.json  reward_function.py
models/642aade7/: hyperparameters.json  model_metadata.json  reward_function.py
models/660ea65b/: evaluation-analysis-660ea65b-ppo.ipynb  hyperparameters.json  metrics-660ea65b-ppo.ipynb  model_metadata.json  reward_function.py
models/8e4c1bcd/: ActionSpace_analysis.ipynb  model_metadata.json  reward_function.py
models/bbfb858a/: model_metadata.json  reward_function.py
models/c6ca6c85/: model_metadata.json  reward_function.py
models/cd69c5d6/: hyperparameters.json  model_metadata.json  reward_function.py
models/d7aac0c3/: hyperparameters.json  model_metadata.json  reward_function.py
models/dd559510/: model_metadata.json  reward_function.py
models/ea94127a/: hyperparameters.json  reward_function.py
models/fb4a1a7a/: action-space-analysis.ipynb  metrics.ipynb  model_metadata.json  reward_function.py  training-analysis.ipynb
notebooks/: manual_thunder_compute_deployment.ipynb
rewards/centerline_following/: reward_function.py
rewards/head_to_head/: reward_function.py
rewards/object_avoidance/: reward_function.py
rewards/time_trial/: reward_function.py
scripts/: create-s3-bucket.sh
thunder_files/4ac29741/: deployment_info.json  run.env  system.env
thunder_files/4d05ded7/: deployment_info.json  run.env  system.env
thunder_files/642aade7/: deployment_info.json  run.env  system.env
thunder_files/660ea65b/: deployment_info.json  run.env  system.env
thunder_files/8e4c1bcd/: deployment_info.json  run.env  system.env
thunder_files/bbfb858a/: deployment_info.json  run.env  system.env
thunder_files/c6ca6c85/: deployment_info.json  run.env  system.env
thunder_files/cd69c5d6/: deployment_info.json  run.env  system.env
thunder_files/d7aac0c3/: deployment_info.json  run.env  system.env
thunder_files/dd559510/: deployment_info.json  run.env  system.env
thunder_files/e7bec9f6/: deployment_info.json  run.env  system.env
thunder_files/ea94127a/: deployment_info.json  run.env  system.env
thunder_files/fb4a1a7a/: deployment_info.json  run.env  system.env
tracks/: tracks.json
vm/: bootstrap.sh
(+123 files in other folders)
