[tool.poetry]
name = "deepracer-research"
version = "0.1.0"
description = "Deep Reinforcement Learning for Autonomous Driving in Amazon Web Services DeepRacer"
authors = ["Bartlomiej Mlynarkiewicz <17241782@studentmail.ie>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Btech-Racer/notebooks"
repository = "https://github.com/Btech-Racer/notebooks"
documentation = "https://github.com/Btech-Racer/notebooks/blob/main/README.md"
keywords = ["deepracer", "reinforcement-learning", "autonomous-driving", "aws", "machine-learning", "deep-learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.3.1"
scipy = "^1.16.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"
tensorflow = "^2.16.0"
tf-keras = "^2.16.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
scikit-learn = "^1.3.0"
optuna = "^3.4.0"
tensorflow-probability = "^0.24.0"
opencv-python = "^4.8.0"
pillow = "^11.3.0"
albumentations = "^2.0.8"
imageio = "^2.37.0"
tqdm = "^4.67.1"
python-dotenv = "^1.1.1"
pyyaml = "^6.0.2"
requests = "^2.32.4"
pathlib = "^1.0.1"
jsonschema = "^4.20.0"
nbconvert = "^7.16.6"
voila = "^0.5.8"
tensorboard = "^2.17.0"
wandb = "^0.21.0"
mlflow = "^3.1.4"
visdom = "^0.2.4"
stable-baselines3 = "^2.7.0"
gymnasium = "^1.0.0"
ray = {extras = ["rllib"], version = "^2.48.0"}
sympy = "^1.14.0"
statsmodels = "^0.14.5"
networkx = "^3.5"
tslearn = "^0.6.4"
librosa = "^0.11.0"
hyperopt = "^0.2.7"
scikit-optimize = "^0.10.0"
rich = "13.7.1"
wrapt = "^1.17.2"
typing-extensions = "^4.14.1"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.4.5"
ipykernel = "^6.30.0"
ipywidgets = "^8.1.7"
notebook = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.1.0"
hypothesis = "^6.136.6"

black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pylint = "^3.3.7"
mypy = "^1.17.0"
bandit = "^1.8.6"
pre-commit = "^4.0.0"

[tool.poetry.group.cli.dependencies]
typer = "^0.12.0"
rich = "^13.7.1"
click = "^8.1.0,<8.2.0"
jinja2 = "^3.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

[tool.poetry.group.research.dependencies]
transformers = "^4.54.0"
datasets = "^4.0.0"
accelerate = "^1.9.0"
diffusers = "^0.34.0"
timm = "^1.0.19"
torchtext = "^0.18.0"
torchdata = "^0.11.0"
dask = "^2025.7.0"
distributed = "^2025.7.0"
cvxpy = "^1.7.1"
casadi = "^3.7.1"

[tool.poetry.group.aws.dependencies]
boto3 = "^1.34.0"
botocore = "^1.34.0"
awscli = "^1.41.14"
moto = "^5.1.8"
sagemaker = "^2.248.2"
deepracer-utils = "^1.0.11"
paramiko = "^3.5.0"

[tool.poetry.scripts]
deepracer-research = "deepracer_research.cli:main_cli"
train-model = "deepracer_research.training:main"
evaluate-model = "deepracer_research.evaluation:main"
deploy-model = "deepracer_research.deployment:main"
analyze-logs = "deepracer_research.analysis:main"
thunder-compute = "deepracer_research.deployment.thunder_compute.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["deepracer_research"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "cv2.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "tensorflow.*",
    "torch.*",
    "sklearn.*",
    "optuna.*",
    "wandb.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "deepracer_research",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "aws: marks tests that require AWS credentials",
]

[tool.coverage.run]
source = ["deepracer_research"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "deepracer_research/__init__.py",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Btech-Racer/notebooks/issues"
"Changelog" = "https://github.com/Btech-Racer/notebooks/blob/main/CHANGELOG.md"
